@@ -2,6 +2,7 @@
 
 == Version 0.7.1 (in SVN)
 
+* Added support for should_have_rjs :visual_effect
 * Different printing and coulours for unmet expectaions (red) and other exceptions (magenta)
 * Fixed [#6575] Parse error in aliasing the partial mock original method
 * Fixed [#6555] should_have_tag does not match documentation
